# sangria

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  atomix.service  build_docker_images.sh  config.json  config_for_jepsen.json  create_schema.sh
.github/workflows/: build_and_test.yaml
common/: Cargo.toml
common/src/: config.rs  constants.rs  key_range.rs  keyspace_id.rs  lib.rs  region.rs  transaction_info.rs
common/src/membership/: range_assignment_oracle.rs
common/src/network/: fast_network.rs  for_testing.rs
common/src/network/for_testing/: tcp_fast_network.rs  udp_fast_network.rs
common/src/util/: core_affinity.rs  mod.rs
configs/: config.json  config_for_jepsen.json
coordinator/: Cargo.toml
coordinator-rangeclient/: Cargo.toml
coordinator-rangeclient/src/: lib.rs  range_assignment_oracle.rs  rangeclient.rs
coordinator/src/: coordinator.rs  group_commit.rs  lib.rs  rangeclient.rs  resolver.rs  transaction.rs
dev-scripts/: cleanup_cassandra.sh  setup.sh
epoch/: Cargo.toml
epoch/src/: main.rs  server.rs
epoch/src/storage/: cassandra.rs
epoch/tests/: storage_test.rs
epoch_publisher/: Cargo.toml
epoch_publisher/src/: client.rs  main.rs  server.rs
epoch_publisher/tests/: integration_tests.rs
epoch_reader/: Cargo.toml
epoch_reader/src/: reader.rs
flatbuf/src/rangeserver/: schema.fbs
frontend/: Cargo.toml
frontend/src/: error.rs  for_testing.rs  frontend.rs  lib.rs  main.rs  range_assignment_oracle.rs
frontend/src/for_testing/: mock_epoch_publisher.rs  mock_rangeserver.rs  mock_universe.rs
frontend/tests/: integration_tests.rs
kubernetes/: cassandra.yaml  debug_pod.yaml  deploy.sh  epoch_publisher.yaml  epoch_service.yaml  frontend.yaml  namespace.yaml  rangeserver.yaml  universe.yaml  warden.yaml
monitoring/: Cargo.toml
monitoring/src/: lib.rs  main.rs
proto/: build.rs
proto/src/: frontend.proto  lib.rs  rangeserver.proto  resolver.proto  universe.proto
rangeclient/: Cargo.toml
rangeclient/src/: client.rs
rangeclient/tests/: integration_tests.rs
rangeserver/: Cargo.toml
rangeserver/src/: config.json  epoch_supplier.rs  error.rs  main.rs  prefetching_buffer.rs  range_manager.rs  server.rs  storage.rs  wal.rs  warden_handler.rs
rangeserver/src/epoch_supplier/: reader.rs
rangeserver/src/for_testing/: epoch_supplier.rs  in_memory_wal.rs
rangeserver/src/range_manager/: impl.rs  labeled_histograms.rs  lock_table.rs
rangeserver/src/storage/: cassandra.rs
rangeserver/src/wal/: cassandra.rs
resolver/: Cargo.toml
resolver/src/: group_commit.rs  lib.rs  main.rs  participant_range_info.rs  resolver.rs  resolver_client.rs  resolver_local.rs  resolver_remote.rs  resolver_trait.rs
resolver/src/core/: group_commit.rs  mod.rs  resolver.rs  statistics.rs
resolver/src/local/: client.rs
resolver/src/remote/: client.rs  server.rs
schema/cassandra/atomix/: keyspace.cql
scripts/: reset_cassandra.sh
tx_state_store/src/: client.rs  storage.rs
tx_state_store/src/storage/: cassandra.rs
universe/: Cargo.toml
universe/src/: main.rs  server.rs  storage.rs
universe/src/storage/: cassandra.rs
universe/tests/: integration_tests.rs
warden/: Cargo.toml
warden/src/: assignment_computation.rs  main.rs  persistence.rs  server.rs
warden/src/persistence/: cassandra.rs
workload-generator/: Cargo.toml  README.md
workload-generator/configs/: config.json  workload-config.json
workload-generator/scripts/: atomix_setup.py  clean-servers.sh  grid_searcher.py  plot_experiments.py  plotter.py  proba.py  ray_task.py  ray_task_ycsb.py  requirements.txt  run_experiments.py  utils.py
workload-generator/scripts/setup/: cluster_setup.py
workload-generator/src/: lib.rs  main.rs  transaction.rs  workload_config.rs  workload_generator.rs
workload-generator/src/transaction_impl/: fake_transaction.rs  mod.rs  rw_transaction.rs
workload-generator/workload-generator/configs/: config.json
workload-generator/ycsb_queries/: workload-uniform.txt  workload_0.0.txt  workload_0.5.txt  workload_0.7.txt  workload_0.9.txt  workload_0.95.txt  workload_1.0.txt
