[package]
name = "coordinator-rangeclient"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.2"
proto = { version = "0.1.0", path = "../proto" }
common = { version = "0.1.0", path = "../common" }
epoch_reader = { version = "0.1.0", path = "../epoch_reader" }
universe = { version = "0.1.0", path = "../universe"}
rangeclient = { version = "0.1.0", path = "../rangeclient" }
strum = "0.26.3"
tokio = "1.40.0"
tokio-util = "0.7.10"
uuid = "1.10.0"
tonic = "0.11.0"
tracing = "0.1.40"
colored = "3.0.0"
async-trait = "0.1.82"
hex = "0.4"