[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
coordinator = { version = "0.1.0", path = "../coordinator"}
universe = { version = "0.1.0", path = "../universe"}
epoch_reader = { version = "0.1.0", path = "../epoch_reader"}
flatbuf = {path = "../flatbuf"}
bytes = "1.7.2"
proto = {path = "../proto"}
strum = "0.26.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { version="0.1.15", features = ["sync"]}
uuid = "1.10.0"
async-trait = "0.1.82"
serde = "1.0.210"
serde_json = "1.0.128"
tonic = "0.11.0"
tracing = "0.1.40"
prost = "0.12"
tracing-subscriber = "0.3.18"
chrono = "0.4"
scylla = "0.13.2"
portpicker = "0.1.1"
once_cell = "1.19.0"
flatbuffers = "24.3.25"
clap = { version = "4.5", features = ["derive"] }
