[package]
name = "resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = {path = "../proto"}
common = { version = "0.1.0", path = "../common" }
coordinator-rangeclient = { version = "0.1.0", path = "../coordinator-rangeclient"}
universe = { version = "0.1.0", path = "../universe"}
bytes = "1.7.2"
strum = "0.26.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { version="0.1.15", features = ["sync"]}
uuid = "1.10.0"
async-trait = "0.1.82"
serde = "1.0.210"
serde_json = "1.0.128"
tonic = "0.11.0"
tracing = "0.1.40"
prost = "0.12"
tracing-subscriber = "0.3.18"
chrono = "0.4"
scylla = "0.13.2"
portpicker = "0.1.1"
once_cell = "1.19.0"
flatbuffers = "24.3.25"
num_cpus = "1.16.0"
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.7.0"
hex = "0.4"
tx_state_store = { version = "0.1.0", path = "../tx_state_store" }
affinity = "0.1.2"
nix = { version = "0.27.1", features = ["sched"] }