[package]
name = "workload-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
proto = {path = "../proto"}
frontend = { version = "0.1.0", path = "../frontend"}
universe = { version = "0.1.0", path = "../universe"}
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { version="0.1.15", features = ["sync"]}
serde = "1.0.210"
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
bytes = "1.7.2"
uuid = "1.10.0"
tonic = "0.11.0"
num_cpus = "1.16"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.7.0"


